<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundjj8x8"
    tools:context="com.example.android.justjava2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dips_eight"
            android:scaleType="fitXY"
            android:src="@drawable/logo75" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dips_sixteen"
            android:layout_marginRight="@dimen/dips_sixteen"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/dips_sixteen" />

        <TextView
            android:id="@+id/choose_toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dips_sixteen"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_twentyfour" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/choose_toppings"
            android:layout_gravity="center"
            android:gravity="center">

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dips_sixteen"
                android:paddingLeft="@dimen/dips_eight"
                android:text="@string/whipped_cream"
                android:textSize="@dimen/textsize_sixteen" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/whipped_cream_checkbox"
                android:paddingLeft="@dimen/dips_eight"
                android:text="@string/chocolate"
                android:textSize="@dimen/textsize_sixteen" />

            <CheckBox
                android:id="@+id/caramel_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dips_sixteen"
                android:layout_marginTop="@dimen/dips_sixteen"
                android:layout_toRightOf="@id/whipped_cream_checkbox"
                android:paddingLeft="@dimen/dips_eight"
                android:text="@string/caramel"
                android:textSize="@dimen/textsize_sixteen" />

            <CheckBox
                android:id="@+id/cinnamon_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/caramel_checkbox"
                android:layout_below="@id/caramel_checkbox"
                android:layout_toRightOf="@id/chocolate_checkbox"
                android:paddingLeft="@dimen/dips_eight"
                android:text="@string/cinnamon"
                android:textSize="@dimen/textsize_sixteen" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dips_sixteen"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_twentyfour" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dips_sixteen"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/dips_fourtyeight"
                android:layout_height="@dimen/dips_fourtyeight"
                android:background="@drawable/buttondecrement2"
                android:onClick="decrement"
                android:text="@string/decrease"
                android:textColor="#B59770"
                android:textSize="@dimen/textsize_twentyeight" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dips_eight"
                android:layout_marginRight="@dimen/dips_eight"
                android:text="@string/number"
                android:textColor="#000000"
                android:textSize="@dimen/textsize_thirtyfour" />

            <Button
                android:layout_width="@dimen/dips_fourtyeight"
                android:layout_height="@dimen/dips_fourtyeight"
                android:background="@drawable/buttonincrement2"
                android:onClick="increment"
                android:text="@string/increase"
                android:textColor="#B59770"
                android:textSize="@dimen/textsize_twentyeight" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dips_sixteen"
            android:layout_marginTop="@dimen/dips_sixteen"
            android:background="@drawable/buttonordersmaller"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="#B59770"
            android:textSize="@dimen/textsize_twentyeight" />
    </LinearLayout>
</ScrollView>